Butter knife ve camera intenti

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">DetectText-Android</string>
+    <string name="detect_text">Detect Text</string>
 </resources>
