--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">DetectText-Android</string>
     <string name="detect_text">Detect Text</string>
     <string name="select_source">Select Source</string>
+    <string name="error_text">Okuttuğunuz fiş geçerli değil daha sonra tekrar deneyiniz</string>
 </resources>
